SDAP-372: Integrate AWS insitu API (#158)
* Updated doms conf

* Updated matchup to work with aws insitu providers

* Fix platform retrieval code for insitu. New schema is dict

* Added MatchupDoms which queries the DOMS insitu endpoints instead of AWS endpoints

* Get provider name function works for both DOMS and CDMS insitu endpoints

* Fixed platform validation for new CDMS insitu platforms. Expanded CDMS insitu data fields

* Removed unused and unnecessary code

* Removed unnecessary exception

* Added changelogs

* Moved to a single top level changelog
